[package]
name = "snowflaked"
version = "0.1.4"
edition = "2021"
description = "A crate for creating and working with snowflake ids"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
repository = "https://github.com/MrGunflame/snowflaked-rs"
documentation = "https://docs.rs/snowflaked"
license = "MIT OR Apache-2.0"

[features]
default = []
sync = []

[dev-dependencies]
num_cpus = "1.13.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

