[package]
name = "snowflaked"
version = "0.1.6"
edition = "2021"
description = "A crate for creating and working with snowflake ids"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
repository = "https://github.com/MrGunflame/snowflaked-rs"
documentation = "https://docs.rs/snowflaked"
license = "MIT OR Apache-2.0"

[features]
default = []
sync = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "generator"

[[bench]]
name = "sync"
required-features = ["sync"]
